@@ -1,2 +1,1 @@
-DIST django-macaddress-1.3.0.tar.gz 5694 SHA256 2880a5c480972fd8235d77c88b1741adb7dbd4f81fe389b3292451b038ea3aa3 SHA512 0d90e489a45d5b2dd363f764bf7d20d090365ae096a59d1bb8d670973b6f49550a488f038560570d4429c93ad3edf311df479cfdfad52ab0dce9eec030b98685 WHIRLPOOL f688b5d2d0f500b93288562bb3271ea7483b6b93bcdc77067b6407bdc8b37c9140b9df492d405c13ecd0ac09f6f7e6b480c27b61da31ff18b2a1e6c5e09e7901
 DIST django-macaddress-1.3.1.tar.gz 5917 SHA256 a428dc74dedb724edcc88136a1f261f9a5a5e96ec25bd94e9d9787352e265d75 SHA512 86a721c283a3863b8de9c7b27f9e0170f76952f3c53771dcdbd70b38582791e288853778e683d15c38cdfb516744e65b27d225293fefaece56a9093e4859c489 WHIRLPOOL 348afe6b7dd2f5b5803507a43eb58aa32f5d1912be910ea9f6e7196c1e26f903eb1cc4eda17e6c5f1d2789424bb196f71d1522561bff79bf77fcc7630475e73d
