@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Aug 2015; Justin Lecher <jlec@gentoo.org>
+  -django-macaddress-1.3.0-r3.ebuild, -django-macaddress-1.3.1-r1.ebuild,
+  django-macaddress-1.3.1-r2.ebuild:
+  dev-python/django-macaddress: Add test; drop old
+
 *django-macaddress-1.3.1-r2 (07 Aug 2015)
 
   07 Aug 2015; Justin Lecher <jlec@gentoo.org>
